[project]
name = "laypy"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mert-kurttutan", email = "kurttutan.mert@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "laypy._laypy"
features = ["pyo3/extension-module"]